# pytris

./: .gitignore  README.rst  pyproject.toml
pytris/: __init__.py  blocks.pyxel
tests/: test_pytris.py
