[tool.poetry]
name = "pytris"
version = "0.1.0"
description = "Learning pyxel by building tetris"
authors = ["Hayk Khachatryan <hi@hayk.io>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
